crates/openpit-derive/tests/ui/fail/legacy_request_fields_attr.stderr
error: legacy #[request_fields(...)] is not supported; use #[openpit(...)]
  --> tests/ui/fail/legacy_request_fields_attr.rs:29:5
   |
29 |     #[request_fields(HasInstrument(instrument -> &Instrument))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
